Addressed nested structures and arrays for schemaless cases